$Id: //main/2019/qhull/src/Changes.txt#41 $$Date: 2019/06/28 $

.............This file lists all changes to qhull and rbox.....................
Qhull 2019.1
Qhull 2015.2
Qhull 2.0 (1994) to 2012.1

====
== To do
====

- For a list of enhancement requests, see
  http://www.qhull.org/html/qh-code.htm#enhance
- The C++ interface needs work and documentation.  Give it a try and make it better. 
  http://github.com/qhull/qhull/wiki

=============
== Qhull 2019.1
=============

------------
Qhull 2019.1 github
- Review and fix Qhull html and option links

------------
Qhull 2019.1 2019/06/21 (7.3.2)

bugs fixed
- Fixed broken HTML links identified by Firefox Link Analyzer.  Replace old links with web.archive.org (archive.is)
- Moved live code out of qh_NOtrace regions
- qh-faq.htm#learn: fixed the Delaunay examples (rbox generates a square, but does not generate two squares)
- geom2_r.c/qh_maxmin: qh_scalelast for 'd Qbb' to qh.MAXabs_coord instead of qh.MAXwidth [J.R. Roussel, D. Sterratt]
- geom2_r.c/qh_maxsimplex: estimate targetdet as prevdet*qh.MAXwidth, set mindet to 10*qh_RATIOmaxsimplex [J.R. Roussel, D. Sterratt]
- global_r.c/qh_freebuild: in high-D, simplicial facets may use long memory
- global_r.c/qh_initqhull_globals: set qh.DOcheckmax and qh.KEEPnearinside if qh.APPROXhull ('Wn', rbox 100 D3 W1e-1 | qhull QJ W1e-1 Tv)
- libqhull_r.c/qh_addpoint: add qh.lastmerges to qh_addpoint trace
- libqhull_r.c/qh_buildcone_mergepinched: called qh_partitioncoplanar with uninitialized 'dist'
- libqhull_r.c/qh_build_withrestart: if qh_joggle_restart, set v.partitioned for qh.del_vertices.  Avoid error in qh_delvertex from qh_freebuild
- libqhull_r.c/qh_partitionall: if qh.KEEPnearinside, qh_partitionpoint for non-outside pointset
- libqhull_r.c/qh_partitioncoplanar: define qh.coplanar_apex to prevent infinite loop of repartition point
- merge_r.c/qh_checkzero: check opposite vertex against -2*qh.DISTround to account for qh_distround and 'Rn'