@@ -21,8 +21,8 @@
    vertex->neighbors not set until the first merge occurs
 
    Copyright (c) 1993-2019 C.B. Barber.
-   $Id: //main/2019/qhull/src/libqhull_r/merge_r.c#12 $$Change: 2712 $
-   $DateTime: 2019/06/28 12:57:00 $$Author: bbarber $
+   $Id: //main/2019/qhull/src/libqhull_r/merge_r.c#13 $$Change: 2839 $
+   $DateTime: 2019/10/24 23:21:08 $$Author: bbarber $
 */
 
 #include "qhull_ra.h"
@@ -452,7 +452,7 @@ void qh_appendmergeset(qhT *qh, facetT *facet, facetT *neighbor, mergeType merge
   merge->ridge1= NULL;
   merge->ridge2= NULL;
   merge->mergetype= mergetype;
-  if(mergetype > 0 && mergetype <= sizeof(mergetypes))
+  if(mergetype > 0 && mergetype < sizeof(mergetypes)/sizeof(char *))
     mergename= mergetypes[mergetype];
   else
     mergename= mergetypes[MRGnone];
@@ -528,7 +528,7 @@ void qh_appendvertexmerge(qhT *qh, vertexT *vertex, vertexT *destination, mergeT
   merge->ridge1= ridge1;
   merge->ridge2= ridge2;
   merge->mergetype= mergetype;
-  if(mergetype > 0 && mergetype <= sizeof(mergetypes))
+  if(mergetype > 0 && mergetype < sizeof(mergetypes)/sizeof(char *))
     mergename= mergetypes[mergetype];
   else
     mergename= mergetypes[MRGnone];
@@ -3367,7 +3367,7 @@ void qh_mergefacet(qhT *qh, facetT *facet1, facetT *facet2, mergeType mergetype,
   int tracerestore=0, nummerge;
   const char *mergename;
 
-  if(mergetype > 0 && mergetype <= sizeof(mergetypes))
+  if(mergetype > 0 && mergetype < sizeof(mergetypes)/sizeof(char *))
     mergename= mergetypes[mergetype];
   else
     mergename= mergetypes[MRGnone];
@@ -5298,7 +5298,7 @@ void qh_tracemerge(qhT *qh, facetT *facet1, facetT *facet2, mergeType mergetype)
   const char *mergename;
 
 #ifndef qh_NOtrace
-  if(mergetype > 0 && mergetype <= sizeof(mergetypes))
+  if(mergetype > 0 && mergetype < sizeof(mergetypes)/sizeof(char *))
     mergename= mergetypes[mergetype];
   else
     mergename= mergetypes[MRGnone];
